# SimpleServer

./: CMakeLists.txt  CMakePresets.json  server.cpp
